clusters/talos-stpetersburg/apps/ai/inference/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  labels:
    pod-security.kubernetes.io/enforce: privileged
    kustomize.toolkit.fluxcd.io/prune: disabled
